/***********************************************************************
 X3 ChangeLog

2006-06-05  Neil Spierling  <sirvulcan@gmail.com>

	* src/proto-p10.c: Properly handle incomming manual silences.

2006-06-05  Neil Spierling  <sirvulcan@gmail.com>

	* src/common.h: pretty_mask etc declerations.

	* src/nickserv.c: Parse the mask through pretty_mask before adding
	it. Normal ircd side silences go through this, this just keeps
	things looking the same and if a user tries to remove a silence
	added by ADDIGNORE they will be able to. Oh and I HATE GLIBC :P

	* src/proto-p10.c: Send a + if adding a silence.

	* src/tools.c: pretty_mask and one other function for reformatting
	a hostname so its pretty :) from IRCu.

2006-06-04  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Send silences to every nick of a handle, not the
	nick that did the command.

2006-06-04  Neil Spierling  <sirvulcan@gmail.com>

	* src/main.c: Moved spamserv initilization to after chanserv.

	* src/spamserv.c: Read the db earlier.

2006-05-30  Neil Spierling  <sirvulcan@gmail.com>

	* configure: Regenerated.

	* configure.in: Bumped version and changed list email.

	* x3.example.conf: Added SpamServ options.

	* src/chanserv.c: Join SpamServ if enabled when chanserv joins.

	* src/chanserv.h: Declerations

	* src/main.c: Init the new SpamServ service.

	* src/Makefile.am: Added SpamServ files.

	* src/Makefile.in: Regenerated

	* src/modcmd.c: Added SpamServ to REBINDALL.

	* src/opserv.c: Slab/X3 malloc STATS MEMORY updates.

	* src/proto-common.c: Make sure SpamServ gets notices.

	* src/spamserv.c: New service that checks for spamming, floods etc.
	Requires an oper to register it to a channel for it to work.

	* src/spamserv.h: Decelerations.

	* src/spamserv.help: Help entries for SpamServ.

2006-05-29  Neil Spierling  <sirvulcan@gmail.com>

	* Below functions by Wasted (Martijn Smit) <wasted@lostdomain.org>

	* src/chanserv.c: Added selectable bantypes.
